fixe align

--- a/sass/import/_header_Large.scss
+++ b/sass/import/_header_Large.scss
@@ -24,7 +24,7 @@ header {
 .box_logo {
   border: none;
   padding: 18px 0;
-  padding-right: 100px;
+  padding-right: 97px;
 }
 
 .header_nav, .box_logo {
